--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -135,7 +135,12 @@
       font-weight: bold
       font-size: 12px
       line-height: 15px
-      color: #E0E0E0     
+      color: #E0E0E0 
+
+.tel
+  &__link
+    display: inline        
+        
      
       
 
