--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -33,18 +33,21 @@
       font-size: 36px
       line-height: 45px
       text-transform: uppercase
+  &__subscribe
+    flex-wrap: nowrap
+    align-items: flex-start    
 .subscribe
   position: relative
   width: 350px
-  height: 55px
+  min-height: 55px
   border-radius: 4px
   overflow: hidden
 
   &__input
-    position: absolute
+    position: relative
     border: none
     width: 100%
-    height: 100%
+    height: 55px
     padding-left: 33px
     padding-right: 75px
     font-style: normal
@@ -54,15 +57,12 @@
     &-out
       display: flex
       flex-direction: column
-      width: 100%
-      height: 100%
+      flex-basis: 100%
 
   &__button
-    position: absolute
     width: 65px
-    right: 0
-    top: 0
-    height: 100%
+    height: 55px
+    font-size: 12px
     border: none  
     background-color: $primary
     color: $light
